--- a/src/IHM/FenetreAjoutVip.form
+++ b/src/IHM/FenetreAjoutVip.form
@@ -72,13 +72,6 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="txtNumVip" min="-2" pref="59" max="-2" attributes="0"/>
-                                  <Group type="102" attributes="0">
-                                      <Component id="radioBtnMr" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="radioBtnMme" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="txtPrenom" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
-                                  <Component id="txtNom" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
                                   <Component id="txtLieuxNaissance" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="txtAnneeA" min="-2" pref="41" max="-2" attributes="0"/>
@@ -91,14 +84,21 @@
                                       <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                                       <Component id="txtJourA" min="-2" pref="44" max="-2" attributes="0"/>
                                   </Group>
+                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="txtPrenom" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtNom" alignment="0" max="32767" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Component id="radioBtnMr" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Component id="radioBtnMme" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jComboBoxPays" min="-2" pref="88" max="-2" attributes="0"/>
                                   <Group type="102" attributes="0">
-                                      <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="radioBtnCelibataire" min="-2" max="-2" attributes="0"/>
@@ -111,6 +111,10 @@
                                               <Component id="radioBtnRealisateur" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
+                                  </Group>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                                      <Component id="jComboBoxPays" min="-2" pref="105" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
